plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
	id "org.sonarqube" version "6.0.1.5171"
	id 'jacoco'
}

jacoco {
	toolVersion = "0.8.11"
}


sonar {
	properties {
		property "sonar.projectKey", "team2-yumst_yumst"
		property "sonar.organization", "yumst-ci"
		property "sonar.host.url", "https://sonarcloud.io"

		// 자코코 결과 리포트 주소
		property 'sonar.coverage.jacoco.xmlReportPaths', 'build/reports/jacoco/index.xml'

		property 'sonar.sources', 'src/main'
		property 'sonar.language', 'java'
		property 'sonar.sourceEncoding', 'UTF-8'

		// 테스트 커버리지에서 제외할 클래스
		property 'sonar.exclusions', '**/test/**, **/resources/**, **/*Application*.java, **/*Controller*.java, **/*Config.java' +
				'**/*Response.java, **/*Exception.java, **/security/**, **/support/**, **/Q*.java'
		property 'sonar.test.inclusions', '**/*Test.java'
		property 'sonar.java.coveragePlugin', 'jacoco'
	}
}

group = 'com.yumst'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// db
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'org.postgresql:postgresql'

	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// spring batch
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	testImplementation 'org.springframework.batch:spring-batch-test'

	// util
	implementation 'org.modelmapper:modelmapper:3.1.1'

	// crawl
	implementation 'org.seleniumhq.selenium:selenium-java:4.27.0'

	// production 환경에서 삭제
	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.1'
	runtimeOnly 'com.h2database:h2'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

jacocoTestReport {
	reports {
		xml.required = true
	}
}